--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </logotohome>
     <h1>XBP</h1>
         <h2>小林のXBPポートフォリオ一覧</h2>
-        <!-- このようにするとコードとして認識されない。（メモができる）-->
+        <!-- このようにするとコードとして認識されない。（メモができる）-->aaaaa
+    
         <!--番号付きのリスト-->
         <ol>
             <li><a href="./de12/index.html">デザイン演習Ⅰ・Ⅱ</a></li>
