--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </logotohome>
     <h1>XBP</h1>
         <h2>小林のXBPポートフォリオ一覧</h2>
-        <!-- このようにするとコードとして認識されない。（メモができる）-->aaaaa
+        <!-- このようにするとコードとして認識されない。（メモができる）-->aaaaappp
     
         <!--番号付きのリスト-->
         <ol>
