--- a/de12/test.html
+++ b/de12/test.html
@@ -2,8 +2,10 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>〇〇のテストページ</title>
+    <title>xbp小林「ここがタイトルってやつですか...」</title>
     <!-- ⑤スタイルシートの設定をしよう -->
+    <link rel="stylesheet" href="./css/style.css">
+    
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
@@ -11,14 +13,48 @@
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
+         <div>
+            <font size="5">これはテストです。本当です。</font>
+            <br>
+            aaa
+            <br>
+            good
+            <br>
+            Oops!
+            <br>パソコン内で変更できてるのか、ネット上でできてるのか、それが問題だ。
+        </div>
 
          <!-- ②↓に画像（imagesフォルダにあるtest.png）を挿入してみよう -->
+         <img src="./images/testimage.png" width="10%"><br>
+         <img src="./images/testimage.png" width="30%"><br>
+         <img src="./images/testimage.png" width="60%"><br>
+        <img src="../images/0_XBlogo.png" width="30%" >
 
          <!-- ③↓に箇条書きをしてみよう -->
-
+        <ul>
+            <li>dd</li>
+            <li>dss</li>
+        </ul>
+        <ol>
+            <li>dd</li>
+            <li>dss</li>
+        </ol>
          <!-- ④↓に外部リンクを作ってみよう -->
-
-    </div>
+         <a href="./index.html"target="_blank">デザイン演習Ⅰ・Ⅱトップページ</a><br>
+         <a href="../index.html"target="_blank">XBPトップページ</a><br>
+         <a href="https://www.yahoo.co.jp/" target="_blank">Yahoo</a><br>
+         <a href="./files/test.pdf" target="_new">pdfファイル</a>←target="new"タブ増やさないのがユーザーに優しい！<br>
+         <a href="https://www.youtube.com/watch?v=DpFo8xBrLMc" target="">HPを編集&Live Serverで確認byXBP</a><br>
+         <a href="https://qiita.com/doyodoyo/private/452ddfb53b6052232885" target="_blank"><font size="7">これ</font></a>が重要だと思うんよ。（VScodeでgitを更新）<br>
+         <a href="https://www.youtube.com/"target="_blank">youtube ホームページ</a><br>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/0Z6Xn6rNhlo?si=9vTw0DkoRPUzRaBL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 
 </body>
+参考にしたサイト<br>
+<a href="https://kuxbp.github.io/xbp/xbp2023/design_e12/01abouthtml/hp2.html">XBP用のホームページを作成</a><br>
+<a href="https://www.google.com/search?q=%E6%96%87%E5%AD%97+html+%E5%A4%A7%E3%81%8D%E3%81%95&sca_esv=5684149
+26&ei=XnwSZcCCBJmK-QaL16voBQ&oq=%E6%96%87%E5%AD%97+html&gs_lp=Egxnd3Mtd2l6LXNlcnAiC-aWh-WtlyBodG1sKgIIBjIFEAAY
+gAQyBhAAGAcYHjIGEAAYBxgeMgUQABiABDIFEAAYgAQyBhAAGAcYHjIFEAAYgAQyBhAAGAcYHjIGEAAYBxgeMgYQABgHGB5I3zFQrwVYgiFwAXgB
+kAEAmAHfAqAB3AmqAQcwLjUuMS4xuAEByAEA-AEBwgIKEAAYRxjWBBiwA8ICBxAAGA0YgATCAgcQABiKBRhDwgINEAAYigUYsQMYgwEYQ-IDBBgAIEGIBgGQBgo&sclient=gws-wiz-serp"target="_blank">google検索</a><br>
 </html>
