--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <a href="./index.html"><img src="./images/0_XBlogo.png" alt=""></a>
     </logotohome>
     <h1>XBP</h1>
-        <h2>小林のXBPポートフォリオ一覧</h2>
-        <!-- このようにするとコードとして認識されない。（メモができる）-->aaaaappp
+        <h2>小林正樹のXBPポートフォリオ一覧</h2>
+        <!-- このようにするとコードとして認識されない。（メモができる）-->テストするぞ
+
     
         <!--番号付きのリスト-->
         <ol>
