--- a/de12/test.html
+++ b/de12/test.html
@@ -9,7 +9,7 @@
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1>見出し</h1>
+    <h1>見出し小林のテストページ</h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
