--- a/de12/1.html
+++ b/de12/1.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>xbp小林「ここがタイトルってやつですか...」</title>
+    <title>小林正樹 第1回</title>
     <!-- ⑤スタイルシートの設定をしよう -->
     <link rel="stylesheet" href="./css/style.css">
     
@@ -49,7 +49,7 @@
          <a href="https://www.youtube.com/"target="_blank">youtube ホームページ</a><br>
          <iframe width="560" height="315" src="https://www.youtube.com/embed/0Z6Xn6rNhlo?si=9vTw0DkoRPUzRaBL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-
+っっp
 </body>
 参考にしたサイト<br>
 <a href="https://kuxbp.github.io/xbp/xbp2023/design_e12/01abouthtml/hp2.html">XBP用のホームページを作成</a><br>
