--- a/de12/1.html
+++ b/de12/1.html
@@ -9,7 +9,8 @@
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1>見出し小林のテストページ</h1>
+    <h1>第1回のまとめ
+    </h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
