--- a/de12/index.html
+++ b/de12/index.html
@@ -19,7 +19,7 @@
         </ol>
         <h2>演習ノート一覧</h2>
         <ol>
-            <li><a href="../de12/1.html" target="_blank">htmlの基礎知識</a></li>
+            <li><a href="../de12/1.html" target="_blank">課題1</a></li>
         </ol>
 
 
