--- a/de12/1.html
+++ b/de12/1.html
@@ -9,12 +9,11 @@
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1>第1回のまとめ
-    </h1>
+    <h1>第1回のまとめ </h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <h2>gitに関して</h2>
-        <div>gitとはwebサイトのコードの貯蔵庫である。</div>
+        <div>gitとは分散型webサイトのコードの貯蔵庫である。</div>
 
 
 
