--- a/de12/1.html
+++ b/de12/1.html
@@ -51,7 +51,8 @@ HTMLのタグを詳しく知りたい方はこちらから<br>
                 <li>VSコードのソース管理を開く</li>
                 <li>変更の列に＋があるのでそれを押す</li>
                 <li>メッセージ欄に西暦日付を書く</li>
-                
+                <li>コミットを押して、変更を同期を押す</li>
+
             </ol>
      <div>
 
