--- a/de12/1.html
+++ b/de12/1.html
@@ -52,10 +52,11 @@ HTMLのタグを詳しく知りたい方はこちらから<br>
                 <li>変更の列に＋があるのでそれを押す</li>
                 <li>メッセージ欄に西暦日付を書く</li>
                 <li>コミットを押して、変更を同期を押す</li>
-
             </ol>
      <div>
+        ※詳しくはQuiita <a href="https://qiita.com/doyodoyo/private/45179a855e021dd2cb70">
 
+        #HP更新のためのコマンド集（外部サイト）</a> を確認
        
 
     
