--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </logotohome>
     <h1>XBP</h1>
         <h2>小林正樹のXBPポートフォリオ一覧</h2>
-        <!-- このようにするとコードとして認識されない。（メモができる）-->テストするぞ
+        <!-- このようにするとコードとして認識されない。（メモができる）-->
 
     
         <!--番号付きのリスト-->
