--- a/de12/1.html
+++ b/de12/1.html
@@ -106,5 +106,7 @@ HTMLのタグを詳しく知りたい方はこちらから<br>
 </body>
 <br>
 参考にしたサイト<br>
-<a href="https://makefri.jp/web/6286/#h" target="_blank" rel="noopener noreferrer">マケフリ</a>
+<a href="https://makefri.jp/web/6286/#h" target="_blank" rel="noopener noreferrer">マケフリ</a><br>
+<a href="https://www.sejuku.net/blog/5756" target="_blank" rel="noopener noreferrer">samuraiengineer</a>
+
 </html>
