--- a/de12/1.html
+++ b/de12/1.html
@@ -95,6 +95,10 @@ HTMLのタグを詳しく知りたい方はこちらから<br>
             ー>コミットを押して、「変更を同期」を押す<br>
         </div>
 
+        <div>
+            人の画像貼って、直接リンク貼るのは絶対まずい
+            素材画像は自分で作って、貼る
+        </div>
    
         ※詳しくはQuiita <a href="https://qiita.com/doyodoyo/private/45179a855e021dd2cb70">
 
