--- a/de12/1.html
+++ b/de12/1.html
@@ -96,8 +96,9 @@ HTMLのタグを詳しく知りたい方はこちらから<br>
         </div>
 
         <div>
-            人の画像貼って、直接リンク貼るのは絶対まずい
-            素材画像は自分で作って、貼る
+            人の画像貼って、直接リンク貼るのは著作権で訴えられる<br>
+            ->安全策は素材画像は自分で作って、貼るorフリー素材でやる<br>
+            ページのソースを確認で構成を参考にできる。
         </div>
    
         ※詳しくはQuiita <a href="https://qiita.com/doyodoyo/private/45179a855e021dd2cb70">
