--- a/de12/index.html
+++ b/de12/index.html
@@ -20,6 +20,7 @@
         <h2>演習ノート一覧</h2>
         <ol>
             <li><a href="../de12/1.html" target="_blank">課題1</a></li>
+            <li><a href="../de12/2.html" target="_blank">課題2（看板の観察）</a></li>
         </ol>
 
 
