--- a/de12/2.html
+++ b/de12/2.html
@@ -9,8 +9,15 @@
     <logotohome>
    
     </logotohome>
-   
-            </ol>
+   <h1>看板の観察</h1>
+   <h2>画像1「」</h2>
+   <img width="1" height="6" src="" alt="画像１" class="c-headLogo__img" sizes="(max-width: 959px) 50vw, 800px" decoding="async" loading="eager">
+    <div>
+        説明
+
+
+   </div>
+            
         
 
 
