--- a/de12/2.html
+++ b/de12/2.html
@@ -9,9 +9,10 @@
     <logotohome>
    
     </logotohome>
+   <!-- この緑は表示されない、画像貼って説明書く -->
    <h1>看板の観察</h1>
    <h2>画像1「」</h2>
-   <img width="1" height="6" src="" alt="画像１" class="c-headLogo__img" sizes="(max-width: 959px) 50vw, 800px" decoding="async" loading="eager">
+   <img src="./images/testimage.png" width="10%">
     <div>
         説明
 
