--- a/de12/2.html
+++ b/de12/2.html
@@ -34,8 +34,9 @@
     <ol>
         <li>撮影者：私</li>
         <li>日時：夏休み前20230727</li>
-        <li>説明：食堂で食べ終わった後ふと惹かれた看板。<br>
-            　　　現存すものはレプリカだがこの時は本物だったので貴重な一枚。
+        <li>説明：食堂で配膳に皿を戻したあと、隣にあった看板。<br>
+            　　　現存すものはレプリカだがこの時は本物だったので貴重な一枚。<br>
+            　　　目を引くとともに呼びかけているので、効果的に思える。
         </li>
     </ol>
    </div>
@@ -48,6 +49,8 @@
         <li>日時：夏休み前20230729</li>
         <li>説明：日光のおいしい水。<br>
             　　　レポートが終わらない中、リフレッシュに日光に行った時の画像。
+            　　　日光の雰囲気に合わせた看板だと思う。京都の景観保護条例を連想した。
+
         </li>
     </ol>
    </div>
@@ -59,8 +62,10 @@
     <ol>
         <li>撮影者：私</li>
         <li> 日時：夏休み中20230819</li>
-        <li>説明：家族との待ち合わせで平塚駅前でウロウロしていた時に見つけたポスター。<br>
-            　　　なんとなく昭和後期の雰囲気を纏っている。
+        <li>説明：家族との待ち合わせで平塚駅前でウロウロしていた時に、
+            　　　少し暗い路地裏で見つけたポスター。<br>
+            　　　なんとなく昭和後期の雰囲気を纏っている。<br>
+            　　　
         </li>
     </ol>
    </div>
