--- a/de12/2.html
+++ b/de12/2.html
@@ -33,7 +33,7 @@
     <div>
     <ol>
         <li>撮影者：私</li>
-        <li>日時：夏休み前20230727</li>
+        <li>日時：夏休み前2023年07月27日</li>
         <li>説明：食堂で配膳に皿を戻したあと、隣にあった看板。<br>
             　　　現存すものはレプリカだがこの時は本物だったので貴重な一枚。<br>
             　　　目を引くとともに呼びかけているので、効果的に思える。
@@ -46,7 +46,7 @@
     <div>
     <ol>
         <li>撮影者：私</li>
-        <li>日時：夏休み前20230729</li>
+        <li>日時：夏休み前2023年07月29日</li>
         <li>説明：日光のおいしい水。<br>
             　　　レポートが終わらない中、リフレッシュに日光に行った時の画像。
             　　　日光の雰囲気に合わせた看板だと思う。京都の景観保護条例を連想した。
@@ -61,7 +61,7 @@
     <div>
     <ol>
         <li>撮影者：私</li>
-        <li> 日時：夏休み中20230819</li>
+        <li> 日時：夏休み中2023年08月19日</li>
         <li>説明：家族との待ち合わせで平塚駅前でウロウロしていた時に、
             　　　少し暗い路地裏で見つけたポスター。<br>
             　　　なんとなく昭和後期の雰囲気を纏っている。<br>
