--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -13,7 +13,10 @@
     <h1>デジタルファブリケーション</h1>
     <h2>演習ノート一覧</h2>
 
-
+    <ol>
+        <li><a href="./1.html" target="_blank">課題1（ピンセット）</a></li>
+        <li><a href="まだない" target="_blank">課題2（看板の観察）</a></li>
+    </ol>
 
 
     
