--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,7 +15,7 @@
 
     <ol>
         <li><a href="./1.html" target="_blank">課題1（ピンセット）</a></li>
-        <li><a href="まだない" target="_blank">課題2（看板の観察）</a></li>
+        <li><a href="./2.html" target="_blank">課題2（まだない）</a></li>
     </ol>
 
 
