--- a/digi_fab/1.html
+++ b/digi_fab/1.html
@@ -12,7 +12,7 @@
     <h2>作品タイトル：美少女の指ハートピンセット</h2>
          <h3>【構想図】</h3>
          
-         <img src="./beauty girlのコピー2.jpg" width="25%"><br>
+         <img src="./beauty girlの copy2.jpg" width="25%"><br>
          <br>
          <h3>【完成作品】</h3>
          <img src="./realsize.jpg" width="25%"><br>
@@ -38,7 +38,7 @@
          <br>何かを付け足そうと考えた。そこで可愛くて面白いピンセットを目指した。
          <h3>【製作プロセス】</h3>
          はじめ製作を考えていたものはこのような形。<br>
-         <br><img src="./beauty girlのコピー.jpg" width="25%"><br>
+         <br><img src="./beauty girl copy.jpg" width="25%"><br>
          <br>
          等身大の上半身美少女像と記念写真が撮れるようなものにしようと考えていた。<br>
          しかし、サイズ的に非現実的かつ単純に縮尺を小さくしても指が表現されないと思い、<br>
