--- a/de12/3.html
+++ b/de12/3.html
@@ -90,7 +90,49 @@
     </tr>
   </table>
 
+<h3>女子291人中の例外</h3>
+<ol>
+<li>ワンピース多かった。
+<br>（アウターとの組み合わせや、インナーとの組み合わせがしやすい）</li>
+
+<li>カーディガンなど羽織るものを手に持っている人が多かった。</li>
+
+<li>丈が短いボトムスを着用している人は比較的トップスが厚着
+<br>丈が長いボトムスを着用している人は比較的トップスが薄着</li>
+
+<br>（女性で半袖短パンのような格好の人はいなかった。）
+</ol>
+
+<h3>その他目立った例外</h3>
+<ol>
+    <li>道が広くランニングに適しているため、ランニング中の人
+    <br>（通気性・機能性に優れたメッシュ素材の服）もいた。</li>
+
+    <li> 子ども：薄い長袖か半袖
+    <br> 子どもは体温が高い。）</li>
+    <li>警備員/作業員：会社や建設中の建物の近くで観測したため。
+    <br>制服28人：カーディガンを羽織っている人や持っている人もいた。
+    <br>(校外学習で訪れている学生)</li>
+
+</ol>
+
+
 <h3>まとめ</h3>
+<ol>
+    <li>みなとみらいは、ランニングに適していたり会社が多かったり、
+        校外学習やライブに訪れる人もいるため、
+        よりさまざまな服装を観察することができた。</li>
+    <li>服の厚さや素材など、男女差だけでなく世代や訪れている目的
+        によって異なるという考察をすることができた。</li>
+
+</ol>
+
+
+
+
+
+
+
 
 </body>
 
