--- a/de12/3.html
+++ b/de12/3.html
@@ -121,13 +121,13 @@
 </ul>
 
 <h3>まとめ</h3>
-<ol>
+<ul>
     <li>みなとみらいは、ランニングに適していたり会社が多かったり、
         校外学習やライブに訪れる人もいるため、
         よりさまざまな服装を観察することができた。</li>
     <li>服の厚さや素材など、男女差だけでなく世代や訪れている目的
         によって異なるという考察をすることができた。</li>
-</ol>
+</ul>
 
 <h3>個人的な考察とまとめ</h3>
 <ul>
@@ -145,7 +145,7 @@
 
     <li>今回は性別、服の形式、素材に着目したが、
       <br>次回似たような調査の時は目にわかりやすく信ぴょう性の高いものに
-      <br>着目して調査sたい。
+      <br>着目して調査したい。
 
     </li>
     
