--- a/de12/index.html
+++ b/de12/index.html
@@ -21,6 +21,7 @@
         <ol>
             <li><a href="../de12/1.html" target="_blank">課題1</a></li>
             <li><a href="../de12/2.html" target="_blank">課題2（看板の観察）</a></li>
+            <li><a href="../de12/3.html" target="_blank">課題3（衣の調査）</a></li>
         </ol>
 
 
