--- a/de12/1.html
+++ b/de12/1.html
@@ -20,7 +20,7 @@
 
     <div>
          <h2><span id="git">gitに関して</span></h2>
-            <img src="./スクリーンショット 2023-10-09 14.05.13.png" alt="">
+            <img src="../de12/images/git.png" alt="">
 
          <br>
         まずはwikipediaの定義を見てみよう。
