--- a/de12/2.html
+++ b/de12/2.html
@@ -29,7 +29,7 @@
    
     
     <h2>画像1</h2>
-    <img src="../XBP kanban sign/20230727_133407.jpg" width="50%">
+    <img src="../de12/images/XBP kanban sign/foodcourt20230727.jpg" width="50%">
     <div>
     <ol>
         <li>撮影者：私</li>
@@ -42,7 +42,7 @@
    </div>
 
     <h2>画像2</h2>
-    <img src="../XBP kanban sign/20230729_133244.jpg" width="50%">
+    <img src="../de12/images/XBP kanban sign/nikko20230729_133244.jpg" width="50%">
     <div>
     <ol>
         <li>撮影者：私</li>
@@ -57,7 +57,7 @@
 
 
     <h2>画像3</h2>
-    <img src="../XBP kanban sign/20230819_120133.jpg" width="50%">
+    <img src="../de12/images/XBP kanban sign/sexy20230819_120133.jpg" width="50%">
     <div>
     <ol>
         <li>撮影者：私</li>
