--- a/de12/3.html
+++ b/de12/3.html
@@ -95,7 +95,7 @@
   </table>
 
     <h4>円グラフにすると</h4>
-    <img src="./gragh1.png" alt="" width="55%" srcset="">
+    <img src="../de12/images/gragh1.png" alt="" width="55%" srcset="">
 <h3>女子291人中の例外</h3>
 <ul>
     <li>ワンピース多かった。
