--- a/de12/4.html
+++ b/de12/4.html
@@ -11,24 +11,30 @@
     </h1>
     <a href="../de12/python/sansu-rand.py">算数ゲーム</a>
 
-    <pre><code>
-        for i in range(1,10): #コロンが入っていることに注意
-
-        print(i,"回目")
-        import random
-        a = random.randint(50, 100)
-        b = random.randint(50, 100)
-        c = random.randint(50, 100)
-        print(a, " ＋", b, "＋", c)
-        Answer=int(input("いくら？"))
-    
-        if Answer == a+b+c:
-            print("<<<<!!!やるやん正解!!!>>>>")
-        else :    
-            print("<<<<!!!ブブー!!!>>>>")
-      
-
-    </code></pre>
     <div>以下がコードの画面です</div>
     <img src="./images/cord_sansu 2023-10-27 15.14.39.png" alt="" sizes="10%" width="75%">
+    <code>
+        <ol style="list-style:decimal-leading-zero outside;in-left:0;padding-left:36px;margin:0;background-color:#EEF;color:#000;">
+        <li style="background-color:#EFF;">for i in range(1,10): #コロンが入っていることに注意</li>
+        <li style="background-color:#EEF;"></li>
+        <li style="background-color:#EFF;">&nbsp;&nbsp;&nbsp;&nbsp;print(i,"回目")</li>
+        <li style="background-color:#EEF;">&nbsp;&nbsp;&nbsp;&nbsp;import random</li>
+        <li style="background-color:#EFF;">&nbsp;&nbsp;&nbsp;&nbsp;a = random.randint(50, 100)</li>
+        <li style="background-color:#EEF;">&nbsp;&nbsp;&nbsp;&nbsp;b = random.randint(50, 100)</li>
+        <li style="background-color:#EFF;">&nbsp;&nbsp;&nbsp;&nbsp;c = random.randint(50, 100)</li>
+        <li style="background-color:#EEF;">&nbsp;&nbsp;&nbsp;&nbsp;print(a, " +", b, "+", c)</li>
+        <li style="background-color:#EFF;">&nbsp;&nbsp;&nbsp;&nbsp;Answer=int(input("いくら？"))</li>
+        <li style="background-color:#EEF;"></li>
+        <li style="background-color:#EFF;">&nbsp;&nbsp;&nbsp;&nbsp;if Answer == a+b+c:</li>
+        <li style="background-color:#EEF;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print("&lt;&lt;&lt;&lt;!!!やるやん正解!!!&gt;&gt;&gt;&gt;")</li>
+        <li style="background-color:#EFF;">&nbsp;&nbsp;&nbsp;&nbsp;else :    </li>
+        <li style="background-color:#EEF;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;print("&lt;&lt;&lt;&lt;!!!ブブー!!!&gt;&gt;&gt;&gt;")</li>
+        <li style="background-color:#EFF;"></li>
+        </ol></code>
+
+
 </body>
+<div>メモ
+    <br>
+</div>
+<p><a href="http://marginalsoft.com/tools/srctohtml/" rel="nofollow noopener" target="_blank">srctohtml</a>などの変換アプリを使うと便利。</p>
