--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,7 +15,8 @@
 
     <ol>
         <li><a href="./1.html" target="_blank">課題1（ピンセット）</a></li>
-        <li><a href="./2.html" target="_blank">課題2（まだない）</a></li>
+        <li><a href="./2.html" target="_blank">課題2（レーザーカッター）</a></li>
+        <li><a href="./3.html" target="_blank">課題3（まだない）</a></li>
     </ol>
 
 
