--- a/digi_fab/2.html
+++ b/digi_fab/2.html
@@ -2,11 +2,18 @@
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>html_1</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./images/xbp.ico">
+    <title>小林 第2回</title>
+    <link rel="stylesheet" href="css/style 3.css">
+    <link rel="shortcut icon" href="images/xbp.ico">
 </head>
 <body>
+    <ul class="tab">
+        <li class="tabItem noselected" contentId="content1"><a href="../index.html">HOME</a></li>
+        <li class="tabItem noselected" contentId="content2"><a href="../de12/index.html">デザイン演習1・2</a></li>
+        <li class="tabItem noselected" contentId="content3"><a href="index.html">デジタルファブリケーション</a></li>
+        <li class="tabItem noselected" contentId="content4"><a href="https://kuxbp.github.io/xbp/xbp2023/">XBP3期生（外部サイト）</a></li>
+      </ul>
+      
     <h1>第2回デジタルファブリケーション作品
     </h1>
     <h2>レーザーカッター        
