--- a/de12/5.html
+++ b/de12/5.html
@@ -296,8 +296,15 @@
     <li style="background-color:#EFF;"></li>
     </ol></code>
 <img src="../de12/images/def_gragh.png" alt="" width="50%" srcset="">
-<div>実際に違うと赤文字で指摘される。</div>
+
+<div>
 <a href="http://gazushige.com/blog/319668e7-c5ac-470c-a28e-f01214e69a8a#opencv%E3%82%92%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB">【python】2枚の画像の違いを検出する方法【初心者】</a>
+
+    実際に違うと赤文字で指摘される。<br>
+    上記のサイトを見るとすぐにわかる。<br>
+    また、文字でも差異を見つけられるそう。
+</div>
+
 
 <div>基本的に外部サイトをコピペしたものではあるが、
     <br>一部y軸stockの通貨単位がわからなかったので、
@@ -347,8 +354,27 @@
     <li style="background-color:#EEF;">print(forecast_set)</li>
     <li style="background-color:#EFF;"></li>
     </ol></code>
-<div></div>
+<div>
+    原因はバージョンの違いか、<br>
+    コードの記述に過不足があったからだと考えている。<br>
+    
+</div>
 
+<h4>まとめ</h4>
+<div>
+    今回は過去の株価のチャートをある程度正確に表示することには成功した。<br>
+    検証のために間違い探しのライブラリの活用を経験し成功例を得た。<br>
+    しかし、未来の株価予測はできなかった。<br>
+    <br>
+    もし、できるようになった場合は、今度は自動トレードや、<br>
+    ドルコスト法を使ったシステムを作りたい。<br>
+    <br>
+    また、コードを書くプログラマーが代替されるのではないかという話を<br>
+    聞くことがあるが、
+    今回CHATGPT3.5も使ってもコピーしても未来予想は<br>
+    実現しなかったので、プログラマーがchatGPT3.5によって完全に代替されるには<br>
+    まだ時間がかかりそうだと感じた。
+</div>
 </body>
 
 <footer>
@@ -356,10 +382,7 @@
     <a href="https://di-acc2.com/programming/python/27833/#index_id0">【Python】日本株価データを取得・分析・予測する方法</a>
     <br><a href="http://gazushige.com/blog/319668e7-c5ac-470c-a28e-f01214e69a8a#opencv%E3%82%92%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB">【python】2枚の画像の違いを検出する方法【初心者】</a>
     <br><a href="http://https://www.google.com/search?q=sony+%E6%A0%AA%E4%BE%A1&oq=sony+%C2%A5&gs_lcrp=EgZjaHJvbWUqBwgCEAAYogQyBggAEEUYOTIHCAEQABiiBDIHCAIQABiiBDIHCAMQABiiBNIBCDYwMDlqMWo3qAIAsAIA&sourceid=chrome&ie=UTF-8">sony株価 (google finance)</a>
-    
+    <br><a href="http://marginalsoft.com/tools/srctohtml/">html変換ツール</a>
 </footer>
-
-
-
 
 </html>
