--- a/de12/5.html
+++ b/de12/5.html
@@ -373,7 +373,17 @@
     聞くことがあるが、
     今回CHATGPT3.5も使ってもコピーしても未来予想は<br>
     実現しなかったので、プログラマーがchatGPT3.5によって完全に代替されるには<br>
-    まだ時間がかかりそうだと感じた。
+    まだ時間がかかりそうだと感じた。<br>
+    <br>
+    chatGPT3.5もこう語っている。<br>
+    「このコードは単純な株価予測の例であり、<br>
+    実際の株価予測にはさらに多くの特徴量エンジニアリングや<br>
+    モデルの最適化が必要です。また、データの前処理、モデルの評価、<br>
+    モデルの再調整なども含まれます。株価予測は高度なトピックであり、<br>
+    正確な予測を行うためには熟練したデータサイエンティストや<br>
+    専門家のアドバイスが必要です。<br>
+    このコードは教育目的で提供されたものであり、<br>
+    実際のトレーディングには使用しないでください。」
 </div>
 </body>
 
