--- a/de12/index.html
+++ b/de12/index.html
@@ -23,6 +23,8 @@
             <li><a href="../de12/2.html" target="_blank">課題2（看板の観察）</a></li>
             <li><a href="../de12/3.html" target="_blank">課題3（衣の調査）</a></li>
             <li><a href="../de12/4.html" target="_blank">課題4（pythonでゲーム作り）</a></li>
+            <li><a href="../de12/5.html" target="_blank">課題5（pythonライブラリ）</a></li>
+
         </ol>
 
 
