--- a/digi_fab/2.html
+++ b/digi_fab/2.html
@@ -21,7 +21,8 @@
     <h3>インスタ名刺</h3>
     <h4>作ろうとした理由</h4>
     <div>
-    <img src="../digi_fab/images/old_meishi.jpg" alt="">
+    <img src="../digi_fab/images/old_meishi.jpg" width="25%" alt="">
+    <br>
     私は前から相手と連絡先を素早く交換したいと思っていて、<br>
     すでにInstagramの名刺を作っていました。<br>
     しかし普通のプリント用紙なのでペラペラで使いづらかったのです。<br>
@@ -36,7 +37,7 @@
         →.aiの拡張子ファイルをレーザーカッターに入力する。<br>
         →調整の後完成
     </div>
-  <img src="../digi_fab/images/cut_meishi.jpg" alt="">
+  <img src="../digi_fab/images/cut_meishi.jpg" width="25%" alt="ああ">
     <h4>レーザーカッターの注意点</h4>
 
     <ul>
