--- a/digi_fab/3.html
+++ b/digi_fab/3.html
@@ -6,19 +6,46 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/xbp.ico">
 </head>
+
 <body>
     <h1>第3回デジタルファブリケーション作品
     </h1>
     <h2>
-        
+        観察とドキュメンテーション
     </h2>
+    <div>みなとみらいキャンパス6Fラーニングコモンズにいた女子。<br>
 
-   
+   <img src="../digi_fab/images/observe" width="50%">
+       <h4>文字起こし</h4> 
+   <ol>
+<li>
+ずいぶんリラックスしている
+</li>
+<li>
+わりと集中しているあ（？）（動かないから）
+</li>
+<li>
+たまにあぐら
+</li>
+<li>
+多くの人に背を向けている。<br>
+→背後を取られるのが怖くないのか？<br>
+→目を合わせずに済む？
+</li>
+<li>
+    猫背だが手は動いていない。<br>
+    →アウトプットというよりインプットしているのか？
+</li>
+        </ol>
     </div>
-   
-<br>
-<br>
 
+    <h4>
+        追記
+    </h4>
+  <div>
+    10分ほどの荷物を置いての離席状態を経て戻った。<br>
+    その後は特筆すべきことなし。
+    </div> 
 
 </body>
 </html>
