--- a/de12/index.html
+++ b/de12/index.html
@@ -19,11 +19,30 @@
         </ol>
         <h2>演習ノート一覧</h2>
         <ol>
-            <li><a href="../de12/1.html" target="_blank">課題1</a></li>
-            <li><a href="../de12/2.html" target="_blank">課題2（看板の観察）</a></li>
-            <li><a href="../de12/3.html" target="_blank">課題3（衣の調査）</a></li>
-            <li><a href="../de12/4.html" target="_blank">課題4（pythonでゲーム作り）</a></li>
-            <li><a href="../de12/5.html" target="_blank">課題5（pythonライブラリの活用）</a></li>
+            <li>
+                <a href="../de12/1.html" target="_blank">課題1</a>
+            </li>
+            <li>
+                <a href="../de12/2.html" target="_blank">課題2（看板の観察）</a>
+            </li>
+            <li>
+                <a href="../de12/3.html" target="_blank">課題3（衣の調査）</a>
+            </li>
+            <li>
+                <a href="../de12/4.html" target="_blank">課題4（pythonでゲーム作り）</a>
+            </li>
+            <li>
+                <a href="../de12/5.html" target="_blank">課題5（pythonライブラリの活用）</a>
+            </li>
+            <li>
+                <a href="../de12/6.html" target="_blank">課題6pythonとスーモで物件探し</a>
+            </li>
+            <li>
+                <a href="../de12/7.html" target="_blank">課題7</a>
+            </li>
+            <li>
+                <a href="../de12/8.html" target="_blank">課題8</a>
+            </li>
         </ol>
 
 
