--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -14,9 +14,22 @@
     <h2>演習ノート一覧</h2>
 
     <ol>
-        <li><a href="./1.html" target="_blank">課題1（ピンセット）</a></li>
-        <li><a href="./2.html" target="_blank">課題2（レーザーカッター）</a></li>
-        <li><a href="./3.html" target="_blank">課題3（まだない）</a></li>
+        <li>
+            <a href="./1.html" target="_blank">課題1（ピンセット）</a>
+        </li>
+        <li>
+            <a href="./2.html" target="_blank">課題2（レーザーカッター）</a>
+        </li>
+        <li>
+            <a href="./3.html" target="_blank">課題3（観察とドキュメンテーション）</a>
+        </li>
+        <li>
+            <a href="./4.html" target="_blank">課題4</a>
+        </li>
+        <li>
+            <a href="./5.html" target="_blank">課題5</a>
+        </li>
+
     </ol>
 
 
