--- a/de12/6.html
+++ b/de12/6.html
@@ -12,12 +12,33 @@
 <body>
     <h1>第6回pythonとスーモで物件探し</h1>
     <div>4班メンバーの要望</div>
-<img src="../images/Su-mo__100442120.jpg" width="50%">
-<div></div>
+<img src="../de12/images/Su-mo__100442120.jpg" width="30%">
+<br>
+<img src="../de12/images/Yokohama_kawasaki_cvs.png" width="25%"><img src="../de12/images/Yokohama_Kawasaki_2022cvs.png" width="25%">
+<h2>使えるタグ（？）集</h2>
+<div>
+    名称，カテゴリー、アドレス、アクセス、路線，駅、バス停，MMまで，バス，徒歩，
+    <br>
+    車，合計時間，築年数，構造，階数，家賃，管理費，敷金，礼金，間取り，面積，URL</div>
+
+</body>
+<body>
+<h2>ターゲットを絞る</h2>
+<div>今回は、5人の意見を参考にターゲットを想像してみる。
+    <br>
+    左上から時計順に、優先順位つけて
+</div>
 
 
+<h3>1人目</h3>
+<ul>
+<!--優先順位なし-->
 
-    
+</ul>
 
+<h3>2人目</h3>
+<ol><!--優先順位あり-->
+
+</ol>
 
 </body>
