--- a/de12/6.html
+++ b/de12/6.html
@@ -31,14 +31,103 @@
 
 
 <h3>1人目</h3>
-<ul>
-<!--優先順位なし-->
+<ol><!--優先順位あり-->
+<li>
+家賃激安
+</li>
+<li>
+時間早い（MMまでの通学時間短い）
+</li>
+</ol>
+
+<h3>2人目</h3>
+<ul><!--優先順位なし-->
+
+
+<li>
+東横線沿い
+</li>
+<li>
+最寄り駅まで5分以内
+</li>
+<li>
+6畳以上
+</li>
+<li>
+家賃6万以内
+</li>
+<li>
+MMまで1時間以内
+</li>
+
+<h3>3人目</h3>
+<ul><!--優先順位なし-->
+<li>
+家賃6万以内
+</li>
+<li>
+2階以上
+</li>
+<li>
+東横線沿い
+</li>
+<li>
+MMまで1時間以内
+</li>
+<li>
+横キャンにも近い
+</li>
+
+
 
 </ul>
 
-<h3>2人目</h3>
+<h3>4人目</h3>
 <ol><!--優先順位あり-->
+<li>
+2階以上
+</li> 
+<li>
+wifi付き
+</li>
+<li>
+MM,YCまで1時間以内
+</li>
+
+
+
+
 
 </ol>
+
+<h3>5人目</h3>
+<ol><!--優先順位あり-->
+<li>
+    MMまで1h未満
+</li>
+<li>
+    東横線沿い
+</li>
+<li>
+    家賃7万以下
+</li>
+<li>
+    2階以上
+</li>
+<li>
+    オートロック（マンション）
+</li>
+<li>
+    バス通学NG
+</li>
+<li>
+    ユニットバスNG
+</li>
+
+
+</ol>
+
+
+
 
 </body>
