--- a/de12/6.html
+++ b/de12/6.html
@@ -42,8 +42,6 @@
 
 <h3>2人目</h3>
 <ul><!--優先順位なし-->
-
-
 <li>
 東横線沿い
 </li>
@@ -58,7 +56,7 @@
 </li>
 <li>
 MMまで1時間以内
-</li>
+</li></ul>
 
 <h3>3人目</h3>
 <ul><!--優先順位なし-->
@@ -127,7 +125,57 @@ MM,YCまで1時間以内
 
 </ol>
 
+<img src="../de12/images/" width="25%">
+<a href="../Excel/Excel版yokohama_kawasaki_2022.xlsx">Excel版Yokohama_Kawasaki_2022cvs</a>
+重視する条件は
+<ul><!--優先順位なし-->
+    <li>
+    東横線沿い
+    </li>
+    <li>
+    最寄り駅まで5分以内
+    </li>
+    <li>
+    6畳=10.9以上
+    </li>
+    <li>
+    家賃6万以内
+    </li>
+    <li>
+    MMまでの合計時間25分以内
+    </li>
+    <li>
+    礼金0
+    </li>
+    <li>
+    バス停不使用
+    </li>
+    <li>
+    全て2階以上で安心
+    </li>
+    <li>
+    築20年以下	
+    </li>
+</ul>
+<div>とした。	</div>												
+				
 
 
+
+<div>
+今回、合計時間（＜６０）、家賃（＜６）<br>
+などを細かく設定したかったが、<br>
+「suumo.py」に書き込んで定義をするのは難しいと<br>
+感じたため、代わりにexcelを使った。<br>
+pythonが使いやすくなるような、拡張機能もいくつか発見したが、<br>
+「suumo.py」を扱うのは変わらず難解そうだった。<br>
+</div>
+
+<h6>発見した拡張機能</h6>
+<div>
+CSVフォルダを右クリックでpreviewを押すと、そこには美しく直感的な操作が！<a href="http://https://devlog.mescius.jp/vscode_excel_csv_viewer/">Excel Viewer</a><br>
+CSVフォルダを右クリックでEdit CSVを押すと、そこには美しく直感的な操作が！<a href="http://https://webrandum.net/vscode-plugin-edit-csv/#google_vignette">Edit CSV</a><br>
+CSVの属性に色付けできる<a href="http://https://qiita.com/0w0/items/07a481921a2ac09a049f">Rainbow CSV</a><br>
+</div>
 
 </body>
