--- a/de12/6.html
+++ b/de12/6.html
@@ -124,7 +124,7 @@ MM,YCまで1時間以内
 
 </ol>
 
-重視する条件は
+5人の意見を参考にして、重視する条件は
 <ul><!--優先順位なし-->
     <li>
     東横線沿い
@@ -133,7 +133,7 @@ MM,YCまで1時間以内
     最寄り駅まで5分以内
     </li>
     <li>
-    6畳=10.9以上
+    6畳=面積10.9(m^2)以上
     </li>
     <li>
     家賃6万以内
@@ -145,13 +145,13 @@ MM,YCまで1時間以内
     礼金0
     </li>
     <li>
-    バス停不使用
+    バス停不使用（バスは高くて面倒だそう）
     </li>
     <li>
     全て2階以上で安心
     </li>
     <li>
-    築20年以下	
+    築20年以下、虫と泥棒対策
     </li>
 </ul>
 <div>とした。	</div>												
