--- a/de12/6.html
+++ b/de12/6.html
@@ -193,5 +193,5 @@ CSVの属性に色付けできる<a href="http://https://qiita.com/0w0/items/07a
 <img src="../de12/images/csv_preview.png" width="30%">
 <img src="../de12/images/rainbow csv_Yokohama_kawasaki_cvs.png" width="30%">
 
-<h6>拡張機能のご利用は自己責任でお願いします。（金融不動産リスペクト）</h6>
+<h6>拡張機能のご利用は自己責任でお願いします。</h6>
 </body>
