--- a/de12/6.html
+++ b/de12/6.html
@@ -166,6 +166,7 @@ MM,YCまで1時間以内
 感じたため、代わりにexcelを使った。<br>
 pythonが使いやすくなるような、拡張機能もいくつか発見し努めたが、<br>
 やはり「suumo.py」を扱うのは変わらず難解だったためである。<br>
+また、chatGPT等に質問するにも「suumo.py」が大きいからか、何故かできなかったのである。<br>
 </div>
 <img src="../de12/images/ToExcekFromCSVsuumo.png" width="25%"><br>
 <a href="../Excel/Excel版yokohama_kawasaki_2022.xlsx">Excel版Yokohama_Kawasaki_2022.cvs</a>
@@ -193,5 +194,5 @@ CSVの属性に色付けできる<a href="http://https://qiita.com/0w0/items/07a
 <img src="../de12/images/csv_preview.png" width="30%">
 <img src="../de12/images/rainbow csv_Yokohama_kawasaki_cvs.png" width="30%">
 
-<h6>拡張機能のご利用は自己責任でお願いします。</h6>
+<h6>拡張機能のご利用は自己責任でお願いします。（業者リスペクト）</h6>
 </body>
