--- a/de12/6.html
+++ b/de12/6.html
@@ -167,6 +167,7 @@ MM,YCまで1時間以内
 pythonが使いやすくなるような、拡張機能もいくつか発見し努めたが、<br>
 やはり「suumo.py」を扱うのは変わらず難解だったためである。<br>
 また、chatGPT等に質問するにも「suumo.py」が大きいからか、何故かできなかったのである。<br>
+もしこのExcelの作業をpythonでもできればすごくいいと思った。<br>
 </div>
 <img src="../de12/images/ToExcekFromCSVsuumo.png" width="25%"><br>
 <a href="../Excel/Excel版yokohama_kawasaki_2022.xlsx">Excel版Yokohama_Kawasaki_2022.cvs</a>
