--- a/de12/6.html
+++ b/de12/6.html
@@ -217,7 +217,7 @@ CSVの属性に色付けできる<a href="http://https://qiita.com/0w0/items/07a
     (≒白楽駅、東白楽駅まで近い)</li>
 </ul>
 を満たす"可能性が高い"のは<br>
-「白楽駅」「東白楽駅」「妙蓮寺駅」「菊名」なので、
+「白楽駅」「東白楽駅」「妙蓮寺駅」「菊名」なので、<br>
 これらが最寄りの駅になってる物件をおすすめする。</div>
 
 </body>
