--- a/de12/6.html
+++ b/de12/6.html
@@ -220,4 +220,12 @@ CSVの属性に色付けできる<a href="http://https://qiita.com/0w0/items/07a
 「白楽駅」「東白楽駅」「妙蓮寺駅」「菊名」なので、<br>
 これらが最寄りの駅になってる物件をおすすめする。</div>
 
+<h3>おまけ2
+    </h3>
+<div>安く住める優良事故物件を新入生にすすめるという少しダークな提案も<br>
+    挙がっていたが、これは時間不足のため叶わず。これを見た誰かに託すことにする。
+    <a href="https://jobutsu.jp/buy/">成仏不動産</a>
+    <a href="https://www.oshimaland.co.jp/">大島てる</a>
+    <a href="https://qiita.com/atsuken/items/a5c0de765944f97313c4">Qiita（サイトからデータをとる方法）</a>
+</div>
 </body>
