--- a/de12/6.html
+++ b/de12/6.html
@@ -224,8 +224,8 @@ CSVの属性に色付けできる<a href="http://https://qiita.com/0w0/items/07a
     </h3>
 <div>安く住める優良事故物件を新入生にすすめるという少しダークな提案も<br>
     挙がっていたが、これは時間不足のため叶わず。これを見た誰かに託すことにする。
-    <a href="https://jobutsu.jp/buy/">成仏不動産</a>
-    <a href="https://www.oshimaland.co.jp/">大島てる</a>
-    <a href="https://qiita.com/atsuken/items/a5c0de765944f97313c4">Qiita（サイトからデータをとる方法）</a>
+    <a href="https://jobutsu.jp/buy/">成仏不動産</a><br>
+    <a href="https://www.oshimaland.co.jp/">大島てる</a><br>
+    <a href="https://qiita.com/atsuken/items/a5c0de765944f97313c4">Qiita（サイトからデータをとる方法）</a><br>
 </div>
 </body>
