--- a/de12/6.html
+++ b/de12/6.html
@@ -200,7 +200,7 @@ CSVの属性に色付けできる<a href="http://https://qiita.com/0w0/items/07a
 今後のVScodeライフに<a href="http://qiita.com/ta-iga/items/94ed09aa8117d6926b36">qiita便利な拡張機能集</a></div>
 
 
-<h6>それぞれの拡張機能のご利用は自己責任でお願いします。（業者リスペクト）</h6>
+<h6>それぞれの拡張機能のご利用は自己責任でお願いします。</h6>
 
 <h3>おまけ</h3>
 <img src="../de12/img(suumo)/TY-yachin.png"width="40%">
