--- a/de12/6.html
+++ b/de12/6.html
@@ -163,7 +163,8 @@ MM,YCまで1時間以内
 				
 <img src="../de12/img(suumo)/ToExcekFromCSVsuumo.png" width="55%"><br>
 <a href="../Excel/Excel版yokohama_kawasaki_2022.xlsx">Excel版Yokohama_Kawasaki_2022.xlsx(元.cvs)</a>
-
+<a href="../Excel/yokohama_kawasaki.xlsx">Excelと化したyokohama_kawasaki.xlsx</a>
+<a href="../Excel/yokohama_kawasaki_2022.xlsx">Excelと化したyokohama_kawasaki_2022.xlsx</a>
 <h5>excel版作成の手順</h5>
 <ol>
     <li>excelで当のcsvファイルを開く
