--- a/de12/6.html
+++ b/de12/6.html
@@ -162,9 +162,9 @@ MM,YCまで1時間以内
     そして以上の条件を満たしそうな物件を絞ったものがこちら</div>												
 				
 <img src="../de12/img(suumo)/ToExcekFromCSVsuumo.png" width="55%"><br>
-<a href="../Excel/Excel版yokohama_kawasaki_2022.xlsx">Excel版Yokohama_Kawasaki_2022.xlsx(元.cvs)</a>
-<a href="../Excel/yokohama_kawasaki.xlsx">Excelと化したyokohama_kawasaki.xlsx</a>
-<a href="../Excel/yokohama_kawasaki_2022.xlsx">Excelと化したyokohama_kawasaki_2022.xlsx</a>
+<a href="../Excel/Excel版yokohama_kawasaki_2022.xlsx">Excel版Yokohama_Kawasaki_2022.xlsx(元.cvs)</a><br>
+<a href="../Excel/yokohama_kawasaki.xlsx">Excelと化したyokohama_kawasaki.xlsx（フィルタされてない）</a><br>
+<a href="../Excel/yokohama_kawasaki_2022.xlsx">Excelと化したyokohama_kawasaki_2022.xlsx（フィルタされてない）</a><br>
 <h5>excel版作成の手順</h5>
 <ol>
     <li>excelで当のcsvファイルを開く
