--- a/de12/6.html
+++ b/de12/6.html
@@ -165,6 +165,7 @@ MM,YCまで1時間以内
 <a href="../Excel/Excel版yokohama_kawasaki_2022.xlsx">Excel版Yokohama_Kawasaki_2022.xlsx(元.cvs)</a><br>
 <a href="../Excel/yokohama_kawasaki.xlsx">Excelと化したyokohama_kawasaki.xlsx（フィルタされてない）</a><br>
 <a href="../Excel/yokohama_kawasaki_2022.xlsx">Excelと化したyokohama_kawasaki_2022.xlsx（フィルタされてない）</a><br>
+<div>10MB以上もあるファイルだったがリポジトリが破壊されなくてよかった</div>
 <h5>excel版作成の手順</h5>
 <ol>
     <li>excelで当のcsvファイルを開く
