--- a/de12/6.html
+++ b/de12/6.html
@@ -3,7 +3,7 @@
 <head>
 
 
-    <title>小林正樹 第1回</title>
+    <title>小林正樹 第6回suumo</title>
 
     <link rel="stylesheet" href="./css/style.css">
     </head>
