--- a/de12/index.html
+++ b/de12/index.html
@@ -38,7 +38,7 @@
                 <a href="../de12/6.html" target="_blank">課題6pythonとスーモで物件探し</a>
             </li>
             <li>
-                <a href="../de12/7.html" target="_blank">課題7</a>
+                <a href="../de12/7.html" target="_blank">課題7（4班でのスーモの分析プレゼン）</a>
             </li>
             <li>
                 <a href="../de12/8.html" target="_blank">課題8</a>
