--- a/de12/4.html
+++ b/de12/4.html
@@ -3,7 +3,7 @@
 <head>
    
     <link rel="stylesheet" href="./css/style.css">
-     <title>小林正樹 第4回pythonゲー</title>
+     <title>小林正樹 第4回pythonゲーム</title>
 </head>
 <body>
     <h1><div style="background: #ffe4e1; border: #ffe4e1 solid 2px; font-size: 100%; padding: 20px;">
