--- a/digi_fab/4.html
+++ b/digi_fab/4.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>第4回デジタルファブリケーション作品
+    <h1>第4回 Design for Others
     </h1>
 
 
@@ -18,6 +18,11 @@
 
 
 
+<div>
+<a href="https://kuxbp.github.io/xbp/xbp2023/digital_fabrication/">
+    デジタル・ファブリケーションHP</a>-
 
-    
+<a href="https://kuxbp.github.io/xbp/xbp2023/digital_fabrication/05_design_for_others.html">
+    Design for Others-2</a>
+</div>
 </body>
