--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,19 +15,24 @@
 
     <ol>
         <li>
-            <a href="./1.html" target="_blank">課題1（ピンセット）</a>
+            <a href="./1.html" target="_blank">
+                課題1（ピンセット）</a>
         </li>
         <li>
-            <a href="./2.html" target="_blank">課題2（レーザーカッター）</a>
+            <a href="./2.html" target="_blank">
+                課題2（レーザーカッター）</a>
         </li>
         <li>
-            <a href="./3.html" target="_blank">課題3（観察とドキュメンテーション）</a>
+            <a href="./3.html" target="_blank">
+                課題3（観察とドキュメンテーション）</a>
         </li>
         <li>
-            <a href="./4.html" target="_blank">課題4</a>
+            <a href="./4.html" target="_blank">
+                課題4　design_for_others</a>
         </li>
         <li>
-            <a href="./5.html" target="_blank">課題5</a>
+            <a href="./5.html" target="_blank">
+                課題5　最終課題</a>
         </li>
 
     </ol>
