--- a/de12/index.html
+++ b/de12/index.html
@@ -41,7 +41,7 @@
                 <a href="../de12/7.html" target="_blank">課題7（4班でのスーモの分析プレゼン）</a>
             </li>
             <li>
-                <a href="../de12/8.html" target="_blank">課題8</a>
+                <a href="../de12/8.html" target="_blank">課題8/新聞から言葉のデータ分析</a>
             </li>
         </ol>
 
