--- a/de12/8.html
+++ b/de12/8.html
@@ -3,16 +3,75 @@
 <head>
 
 
-    <title>小林正樹 第8回</title>
+    <title>小林正樹 第8回データ分析</title>
 
     <link rel="stylesheet" href="./css/style.css">
     </head>
 
 
 <body>
+<h1>朝日新聞で見る、単語の傾向</h1>
+
+<div>今回は「感染症」にまつわる単語について調べました。<br>
+    時期<br>
+    現代(2010年01月01日~2020年12月31日)と、<br>
+    近現代(縮刷版1960年01月01日~1980年12年31日)<br>
+
+<h2>現代</h2>
+
+<img src="../de12/img_New_Asahi/newplot (10).png" width="45%">
+<img src="../de12/img_New_Asahi/newplot (11).png" width="45%">
+<img src="../de12/img_New_Asahi/newplot (12).png" width="45%">
+
+<br>
+<a  href="../de12/New_DL.ver..zip">現代記事のpython分析キット</a>
+
+
+<h2>近現代</h2>
+<img src="../de12/img_old_asahi/newplot (3).png" width="45%">
+<img src="../de12/img_old_asahi/newplot (14).png" width="45%">
+<img src="../de12/img_old_asahi/newplot (15).png" width="45%">
+<img src="../de12/img_old_asahi/newplot (16).png" width="45%">
+<img src="../de12/img_old_asahi/newplot (17).png" width="45%">
+
+
+<br>
+<a href="../de12/Older_DL.ver..zip">近現代記事のpython分析キット</a>
 
 
 
+
+
+<h2>気付き・感想</h2>
+<ul>
+    <li>
+耐性、賞、抗菌、予防などの文言が増えた。
+    </li>
+    <li>
+
+    </li>
+    <li>
+
+    </li>
+    <li>
+
+    </li>
+    <li>
+
+    </li>
+
+
+
+
+</ul>
+
+
+
+
+
+
+
+</div>
 
 
     
