--- a/de12/index.html
+++ b/de12/index.html
@@ -31,12 +31,20 @@
             <li>
                 <a href="../de12/4.html" target="_blank">課題4（pythonでゲーム作り）</a>
             </li>
+
+            <li>
+                <a href="../de12/T-rex.html" targeT="_self"　　>Googleの恐竜のやつ（不完全）</a>
+            </li>
+
             <li>
                 <a href="../de12/5.html" target="_blank">課題5（pythonライブラリの活用）</a>
             </li>
             <li>
                 <a href="../de12/6.html" target="_blank">課題6pythonとスーモで物件探し</a>
             </li>
+            
+
+
             <li>
                 <a href="../de12/7.html" target="_blank">課題7（4班でのスーモの分析プレゼン）</a>
             </li>
