--- a/de12/T-rex.html
+++ b/de12/T-rex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> == $0
+<!DOCTYPE html> 試しに検証してみました。プレイするには Space キーを押してください
 
 <html dir="ltr" lang="ja" class="offline">
     <head>
@@ -6579,7 +6579,7 @@
   F.prototype.b=function(a,b){var c=R(b),e=c.jsdisplay;if(e){if(!y(a,e,b)){r(b);return}q(b)}if(e=c.jsvars)for(var d=0,g=e.length;d<g;d+=2){var h=e[d],f=y(a,e[d+1],b);a.a[h]=f}if(e=c.jsvalues)for(d=0,g=e.length;d<g;d+=2)if(f=e[d],h=y(a,e[d+1],b),"$"==f.charAt(0))a.a[f]=h;else if("."==f.charAt(0)){f=f.substr(1).split(".");for(var k=b,O=f.length,C=0,U=O-1;C<U;++C){var D=f[C];k[D]||(k[D]={});k=k[D]}k[f[O-1]]=h}else f&&("boolean"==typeof h?h?b.setAttribute(f,f):b.removeAttribute(f):b.setAttribute(f,""+h));
   if(e=c.jseval)for(d=0,g=e.length;d<g;++d)y(a,e[d],b);e=c.jsskip;if(!e||!y(a,e,b))if(c=c.jscontent){if(c=""+y(a,c,b),b.innerHTML!=c){for(;b.firstChild;)e=b.firstChild,e.parentNode.removeChild(e);b.appendChild(this.m.createTextNode(c))}}else{c=Q(this);for(e=b.firstChild;e;e=e.nextSibling)1==e.nodeType&&c.push(this.g,a,e);c.length&&P(this,c)}};function R(a){if(a.__jstcache)return a.__jstcache;var b=a.getAttribute("jstcache");return b?a.__jstcache=H[b]:M(a)}
   function S(a,b){var c=document;if(b){var e=c.getElementById(a);if(!e){e=b();var d=c.getElementById("jsts");d||(d=c.createElement("div"),d.id="jsts",r(d),d.style.position="absolute",c.body.appendChild(d));var g=c.createElement("div");d.appendChild(g);g.innerHTML=e;e=c.getElementById(a)}c=e}else c=c.getElementById(a);return c?(L(c),c=c.cloneNode(!0),c.removeAttribute("id"),c):null}function T(a,b,c){c==b.length-1?a.setAttribute("jsinstance","*"+c):a.setAttribute("jsinstance",""+c)};window.jstGetTemplate=S;window.JsEvalContext=u;window.jstProcess=function(a,b){var c=new F;L(b);c.m=b?9==b.nodeType?b:b.ownerDocument||document:document;var e=m(c,c.g,a,b),d=c.j=[],g=c.o=[];c.c=[];e();for(var h,f,k;d.length;)h=d[d.length-1],e=g[g.length-1],e>=h.length?(e=c,f=d.pop(),f.length=0,e.c.push(f),g.pop()):(f=h[e++],k=h[e++],h=h[e++],g[g.length-1]=e,f.call(c,k,h))};
-  })()</script><script jstcache="0">const pageData = {"dinoGameA11yAriaLabel":"Dino ゲーム、プレイ","dinoGameA11yDescription":"Dino ゲーム。ピクセル画像の恐竜がサボテンやプテロダクティルスをよけながら、荒地を走り抜けます。合図の音が聞こえたら、Space キーを押して障害物を飛び越えましょう。","dinoGameA11yGameOver":"ゲームオーバー、スコアは $1 です。","dinoGameA11yHighScore":"ハイスコアは $1 です。","dinoGameA11yJump":"ジャンプ！","dinoGameA11ySpeedToggle":"低速から開始","dinoGameA11yStartGame":"ゲームを開始しました。","errorCode":"","fontfamily":"system-ui,Hiragino Kaku Gothic ProN,sans-serif","fontfamilyMd":"system-ui,Hiragino Kaku Gothic ProN,sans-serif","fontsize":"75%","heading":{"hostName":"dino","msg":"プレイするには Space キーを押してください"},"iconClass":"icon-offline","language":"ja","textdirection":"ltr","title":"chrome://dino/"};var tp = document.getElementById('t');jstProcess(new JsEvalContext(pageData), tp);
-  </script>
+  })()</script>
+  
   </body>
   </html>
