--- a/de12/index.html
+++ b/de12/index.html
@@ -51,6 +51,10 @@
             <li>
                 <a href="../de12/8.html" target="_blank">課題8/新聞から言葉のデータ分析</a>
             </li>
+            <li>
+                <a href="../de12/20231205.pdf" target="_blank">課題9
+                    /インタビュープレゼンpdf</a>
+            </li>
         </ol>
 
 
