--- a/de12/index.html
+++ b/de12/index.html
@@ -31,11 +31,6 @@
             <li>
                 <a href="../de12/4.html" target="_blank">課題4（pythonでゲーム作り）</a>
             </li>
-
-            <li>
-                <a href="../de12/T-rex.html" targeT="_self"　　>Googleの恐竜のやつ（不完全）</a>
-            </li>
-
             <li>
                 <a href="../de12/5.html" target="_blank">課題5（pythonライブラリの活用）</a>
             </li>
@@ -54,6 +49,10 @@
             <li>
                 <a href="../de12/20231205.pdf" target="_blank">課題9
                     /インタビュープレゼンpdf</a>
+            </li>
+            <li>
+                <a href="../de12/de12_logo_change_yamato 202302270 .pdf" target="_blank">課題10
+                    /ロゴとマーケティングpdf</a>
             </li>
         </ol>
 
