--- a/de12/index.html
+++ b/de12/index.html
@@ -51,7 +51,11 @@
                     /インタビュープレゼンpdf</a>
             </li>
             <li>
-                <a href="../de12/de12_logo_change_yamato 202302270 .pdf" target="_blank">課題10
+                <a href="" target="_blank">課題11
+                    /インサイトswot分析pdf</a>
+            </li>
+            <li>
+                <a href="../de12/de12_logo_change_yamato 202302270 .pdf" target="_blank">課題11
                     /ロゴとマーケティングpdf</a>
             </li>
         </ol>
