--- a/de12/index.html
+++ b/de12/index.html
@@ -51,7 +51,7 @@
                     /インタビュープレゼンpdf</a>
             </li>
             <li>
-                <a href="" target="_blank">課題11
+                <a href="../de12/de12_3C_SWOT_20231209.pdf" target="_blank">課題10
                     /インサイトswot分析pdf</a>
             </li>
             <li>
