--- a/digi_fab/5.html
+++ b/digi_fab/5.html
@@ -7,22 +7,74 @@
     <link rel="shortcut icon" href="images/xbp.ico">
 </head>
 <body>
-    <div>>今回の最終課題はお休みです
-    zzz
+    <h2>どこでも安眠メット</h2>
+<h3>作ったキッカケ</h3>
+<div>
+<h5>グループで注目した「気になった人」は、電車内で立って寝てる人</h5><br>
+<br>この人の役に立つものを作ろう。<br>
+<img src="../digi_fab/img_DFOs/slp_in_train.jpg" size="50%" width="50%">
+
+<br>
+<br>
+私のイメージ<br>
+<img src="../digi_fab/img_DFOs/slp_illust.jpg" size="50%"width="50%">
+</div>
+
+<br>
+<br>
+
+<h3>制作過程</h3>
+<div>コンセプトとして<br>
+    電車内で寝るのなら、周りの人と揉めないようなものを装着したいはず。</div>
+<div>柔らかい素材で、本人が電車内の手すりなどに頭をぶつけても、<br>
+    他の人がヘルメットにぶつかっても痛くないものにしよう...</div>
+
+<div>   ->何やら3Dプリンターの素材にも様々あるらしく、<br>
+    たくさん用意されてて硬いPLAだけでなく、<br>
+    柔らかいTPUという素材もあるらしい！<br>
+    なので四角いブツを作り、テストしてみた。<br>
+    <br>
+ 
+<img src="../digi_fab/img_DFOs/TPU1.jpg" size="40%" width="60%"><br>
+画像左はPLA右はTPU <br>
+確かにTPUは中が空洞なので柔らかい。
+</div>
+
+<div>早速作ることにした。</div>
+<div>
+<img src="../digi_fab/img_DFOs/met.stl.jpg" size="50%" width="50%">
+<img src="../digi_fab/img_DFOs/met2.stl.png" size="50%" width="50%">
+<br>
+まずはfusion360で四角柱を回転させてメットらしいものをつくってみた。<br>
+ちなみに球の中をくり抜いて三等分する的な方法も試したが、こちらはほぼ不可能に思えた。
+</div>
+
+<div>
+<img src="../digi_fab/img_DFOs/cura.png" size="50%" width="50%">
+<br> 
+次にcuraで、素材をTPUにしてslice。</div>  
+ <div>
+<img src="../digi_fab/img_DFOs/TPUmet.jpg" size="50%"width="60%">
+    <br>
+
+    そして、3DプリンターにTPU素材をいろいろやってセットし、<br>
+        縮小版の「どこでも安眠メット(仮)」が完成した。<br>
     </div>
+    
+<div>感想<br>
+    制作途中にTPUでクロックスを作ってそのデータを配布する人がいるという話を聞いた。<br>
+    スキャンなのか手動でデータを作ったのかは定かではないが、可能性を感じた。<br>
+    また、ねるメットなるものもあるらしい。
+</div>
 
 
+<div>参考サイト
+<a href="https://kuxbp.github.io/xbp/xbp2023/digital_fabrication/">
+    デジタル・ファブリケーションHP</a>-
 
-
-
-
-
-
-
-
-
-
-
+<a href="https://kuxbp.github.io/xbp/xbp2023/digital_fabrication/05_design_for_others.html">
+    Design for Others-2</a>
+</div>
 
 
 
