--- a/digi_fab/5.html
+++ b/digi_fab/5.html
@@ -7,65 +7,26 @@
     <link rel="shortcut icon" href="images/xbp.ico">
 </head>
 <body>
-    <h2>どこでも安眠メット</h2>
-<h3>作ったキッカケ</h3>
-<div>
-<h5>グループで注目した「気になった人」は、電車内で立って寝てる人</h5><br>
-<br>この人の役に立つものを作ろう。<br>
-<img src="../digi_fab/img_DFOs/slp_in_train.jpg" size="50%" width="50%">
+    <h2>アルミのスマホケース</h2>
 
-<br>
-<br>
-私のイメージ<br>
-<img src="../digi_fab/img_DFOs/slp_illust.jpg" size="50%"width="50%">
+<div>家に家族が飲み終わったアルミ缶がたくさんあったのでこの際に、<br>
+    アルミを溶かして排熱効率のスマホケースを作ろうと思った。
 </div>
 
-<br>
-<br>
+<h3>予想工程</h3>
+<img src="../digi_fab/final/souchi.jpg" width="50%">
+<img src="../digi_fab/final/kata.jpg" width="50%">
 
-<h3>制作過程</h3>
-<div>コンセプトとして<br>
-    電車内で寝るのなら、周りの人と揉めないようなものを装着したいはず。</div>
-<div>柔らかい素材で、本人が電車内の手すりなどに頭をぶつけても、<br>
-    他の人がヘルメットにぶつかっても痛くないものにしよう...</div>
 
-<div>   ->何やら3Dプリンターの素材にも様々あるらしく、<br>
-    たくさん用意されてて硬いPLAだけでなく、<br>
-    柔らかいTPUという素材もあるらしい！<br>
-    なので四角いブツを作り、テストしてみた。<br>
-    <br>
- 
-<img src="../digi_fab/img_DFOs/TPU1.jpg" size="40%" width="60%"><br>
-画像左はPLA右はTPU <br>
-確かにTPUは中が空洞なので柔らかい。
-</div>
+<ol>
+<li>装置づくり</li>
+<li>型作り</li>
+</ol>
 
-<div>早速作ることにした。</div>
-<div>
-<img src="../digi_fab/img_DFOs/met.stl.jpg" size="50%" width="50%">
-<img src="../digi_fab/img_DFOs/met2.stl.png" size="50%" width="50%">
-<br>
-まずはfusion360で四角柱を回転させてメットらしいものをつくってみた。<br>
-ちなみに球の中をくり抜いて三等分する的な方法も試したが、こちらはほぼ不可能に思えた。
-</div>
+<h3>やってみた</h3>
 
-<div>
-<img src="../digi_fab/img_DFOs/cura.png" size="50%" width="50%">
-<br> 
-次にcuraで、素材をTPUにしてslice。</div>  
- <div>
-<img src="../digi_fab/img_DFOs/TPUmet.jpg" size="50%"width="60%">
-    <br>
+<img src="" alt="">
 
-    そして、3DプリンターにTPU素材をいろいろやってセットし、<br>
-        縮小版の「どこでも安眠メット(仮)」が完成した。<br>
-    </div>
-    
-<div>感想<br>
-    制作途中にTPUでクロックスを作ってそのデータを配布する人がいるという話を聞いた。<br>
-    スキャンなのか手動でデータを作ったのかは定かではないが、可能性を感じた。<br>
-    また、ねるメットなるものもあるらしい。
-</div>
 
 
 <div>参考サイト
